/*
 * Copyright 2025 Crrow
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package store.v1;

import "google/protobuf/empty.proto";

service Store {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (google.protobuf.Empty);
}

message Series {
    string key = 1;
    string value = 2;
    int64 timestamp = 3;
}

message GetRequest {
    string key = 1;
    // if the timestamp is not provided, the latest value will be returned
    optional int64 timestamp = 2;
}

message GetResponse {
    Series series = 1;
}

message SetRequest {
    Series series = 1;
}

